# ggo

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION_GUIDE.md  HOMEBREW_SETUP.md  LICENSE  README.md  ROADMAP.md  TECHNICAL_DEBT.md  build.rs  cleanup_test_data.sql  install.sh
.cargo-husky/hooks/: pre-push
.claude/: settings.local.json
.github/workflows/: ci.yaml  pr-tests.yaml  release.yaml  update-homebrew.yaml
Formula/: ggo.rb
src/: cli.rs  config.rs  constants.rs  error.rs  frecency.rs  git.rs  interactive.rs  main.rs  matcher.rs  storage.rs  validation.rs
tests/: integration_tests.rs
tests/common/: mod.rs
