[package]
name = "ggo"
version = "0.2.2"
edition = "2021"
description = "Smart git branch navigation with frecency-based ranking"
repository = "https://github.com/XavierFabregat/ggo"
homepage = "https://github.com/XavierFabregat/ggo"
documentation = "https://github.com/XavierFabregat/ggo"
readme = "README.md"
keywords = ["git", "cli", "productivity", "frecency"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "5.0"
fuzzy-matcher = "0.3"
git2 = { version = "0.19", default-features = false, features = ["https", "vendored-openssl", "vendored-libgit2"] }
inquire = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
tabled = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
scopeguard = "1.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
